Loading challenges, testing with rendering, begining of filter by text and webpack added

--- a/challenges.html
+++ b/challenges.html
@@ -91,12 +91,14 @@
 
         <div class="filter-by-search">
           <h4>Or type to search for keyword</h4>
-          <input type="text" placeholder="Start typing to filter" />
+          <input type="text" id="letters" placeholder="Start typing to filter" />
         </div>
       </div>
     </section>
 
-    <section class="challenge-cards"></section>
+    <section class="challenge-cards">
+      <ul class="challenges-list"></ul>
+    </section>
 
     <footer>
       <div class="footer-summary">
@@ -126,6 +128,7 @@
         </menu>
       </nav>
     </footer>
-    <script src="script.js"></script>
+    <script src="bundle.js"></script>
+    <script src="https://kit.fontawesome.com/f2c041ffa0.js" crossorigin="anonymous"></script>
   </body>
 </html>
