--- a/index.html
+++ b/index.html
@@ -200,6 +200,7 @@
             document.querySelector('.main-nav').classList.toggle('open');
         })
     </script>
+    <script src="https://kit.fontawesome.com/f2c041ffa0.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
