--- a/challenges.html
+++ b/challenges.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" type="text/css" href="static/main.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
     <title>[ESC] Our challenges</title>
   </head>
 
@@ -126,6 +127,6 @@
         </menu>
       </nav>
     </footer>
-    <script></script>
+    <script src="/src/js/challenge-card.js" type="module"></script>
   </body>
 </html>
