Create function for rendering popular challenges

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     <section class="challenges">
         <h2>Popular challenges right now</h2>
         <ul class="challenge-list">
-            <li class="challenge-item">
+            <!-- <li class="challenge-item">
                 <img class="challenge-image" alt="Hacker" src="static/hero.png">
                 <h3 class="challenge-title">Title of room (on-site)</h3>
                 <ul role="meter" class="rating" aria-label="rating"
@@ -119,7 +119,7 @@
                     erit, et non inimicos, et
                 </p>
                 <button class="button primary">Book this room</button>
-            </li>
+            </li> -->
         </ul>
 
         <div class="challenges-cta">
