--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     <nav class="main-nav">
         <button class="main-nav-toggle"></button>
         <menu class="main-menu">
-            <li class="main-menu-item"><a href="">Play online</a></li>
-            <li class="main-menu-item"><a href="">Play on-site</a></li>
+            <li class="main-menu-item"><a href="challenges.html">Play online</a></li>
+            <li class="main-menu-item"><a href="challenges.html">Play on-site</a></li>
             <li class="main-menu-item"><a href="">The story</a></li>
             <li class="main-menu-item"><a href="">Contact us </a></li>
         </menu>
@@ -26,8 +26,8 @@
     <section class="hero">
         <img alt="Hacker in front of screens" src="static/hero.png">
         <div class="hero-cta">
-            <a class="button primary" href="">Online challenges</a>
-            <a class="button secondary" href="">On-site challenges</a>
+            <a class="button primary" href="challenges.html">Online challenges</a>
+            <a class="button secondary" href="challenges.html">On-site challenges</a>
         </div>
     </section>
     <section class="testimonials">
@@ -123,8 +123,8 @@
         </ul>
 
         <div class="challenges-cta">
-            <a class="button primary" href="">Online challenges</a>
-            <a class="button secondary" href="">On-site challenges</a>
+            <a class="button primary" href="challenges.html">Online challenges</a>
+            <a class="button secondary" href="challenges.html">On-site challenges</a>
         </div>
     </section>
 
