Add value to checkboxes

--- a/challenges.html
+++ b/challenges.html
@@ -35,12 +35,14 @@
           <h4>By type</h4>
           <input
             type="checkbox"
+            value="online"
             name="online-challenge"
             id="online-challenge"
           />
           <label for="online-challenge">Include online challenges</label>
           <input
             type="checkbox"
+            value="onsite"
             name="on-site-challenge"
             id="on-site-challenge"
           />
@@ -127,6 +129,6 @@
         </menu>
       </nav>
     </footer>
-    <script src="/src/js/challenge-card.js" type="module"></script>
+    <script src="/src/js/filter-type.js" type="module"></script>
   </body>
 </html>
