Working filter by text and deleted test render file

--- a/challenges.html
+++ b/challenges.html
@@ -91,7 +91,7 @@
 
         <div class="filter-by-search">
           <h4>Or type to search for keyword</h4>
-          <input type="text" id="letters" placeholder="Start typing to filter" />
+          <input type="text" id="text-filter" placeholder="Start typing to filter" />
         </div>
       </div>
     </section>
@@ -129,6 +129,5 @@
       </nav>
     </footer>
     <script src="bundle.js"></script>
-    <script src="https://kit.fontawesome.com/f2c041ffa0.js" crossorigin="anonymous"></script>
   </body>
 </html>
