Move JS file to separate folder

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="static/main.css">
-    <script defer src="src/popular_challenges.js"></script>
+    <script defer src="src/js/popular_challenges.js"></script>
     <title>[ESC] Hacker Escape Rooms</title>
 </head>
 
