--- a/challenges.html
+++ b/challenges.html
@@ -76,19 +76,23 @@
             <li class="rating-star active"></li>
           </ul>
         </div>
-
-        <div class="filter-by-tags">
-          <h4>By tags</h4>
-          <ul>
-            <li>Web</li>
-            <li>Linux</li>
-            <li>Cryptography</li>
-            <li>Coding</li>
-            <li>Web</li>
-            <li>Web</li>
-          </ul>
+   <!-- W -->
+        <div id="btn-container">
+          <h3>Tags</h3>
+          <button class="btn" onclick ="filterObjects('web')">Web</button>
+          <button class="btn" onclick ="filterObjects('linux')">Linux</button>
+          <button class="btn" onclick ="filterObjects('cryptography')">
+            Cryptography
+          </button>
+          <button class="btn" onclick ="filterObjects('coding')">Coding</button>
+          <button class="btn" onclick ="filterObjects('other')">
+            Some other tag
+          </button>
+          <button class="btn active" onclick ="filterObjects('all')">
+            Show all
+          </button>
         </div>
-
+<!-- W -->
         <div class="filter-by-search">
           <h4>Or type to search for keyword</h4>
           <input type="text" placeholder="Start typing to filter" />
