--- a/challenges.html
+++ b/challenges.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" type="text/css" href="static/main.css" />
     <script defer src="src/js/filter_by_type_on_load.js"></script>
+    <script defer src="src/js/stupidtags.js"></script>
+    <link rel="stylesheet" href="static/stupidfilter.css">
+    <link rel="stylesheet" type="text/css" href="static/main.css" />
     <title>[ESC] Our challenges</title>
   </head>
 
