--- a/challenges.html
+++ b/challenges.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script type="module" src="src/js/filter_by_type_on_load.js"></script>
-    <script type="module" src="src/js/stupidtags.js"></script>
+    <script type="module" src="src/js/tag-filter.js"></script>
     <link rel="stylesheet" href="static/stupidfilter.css">
     <link rel="stylesheet" type="text/css" href="static/main.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
@@ -83,7 +83,7 @@
    <!-- W -->
         <div id="btn-container">
           <h3>Tags</h3>
-          <button class="btn" onclick ="filterObjects('web')">Web</button>
+          <!-- <button class="btn" onclick ="filterObjects('web')">Web</button>
           <button class="btn" onclick ="filterObjects('linux')">Linux</button>
           <button class="btn" onclick ="filterObjects('cryptography')">
             Cryptography
@@ -94,7 +94,7 @@
           </button>
           <button class="btn active" onclick ="filterObjects('all')">
             Show all
-          </button>
+          </button> -->
         </div>
 <!-- W -->
         <div class="filter-by-search">
