--- a/challenges.html
+++ b/challenges.html
@@ -105,7 +105,7 @@
     </section>
 
     <section class="challenge-cards">
-      <ul class="challenges-list"></ul>
+      <ul class="challenge-list"></ul>
     </section>
 
     <footer>
