Add query params to challange site links

--- a/challenges.html
+++ b/challenges.html
@@ -20,8 +20,8 @@
     <nav class="main-nav">
       <button class="main-nav-toggle"></button>
       <menu class="main-menu">
-        <li class="main-menu-item"><a href="">Play online</a></li>
-        <li class="main-menu-item"><a href="">Play on-site</a></li>
+        <li class="main-menu-item"><a href="challenges.html?type=online">Play online</a></li>
+        <li class="main-menu-item"><a href="challenges.html?type=onsite">Play on-site</a></li>
         <li class="main-menu-item"><a href="">The story</a></li>
         <li class="main-menu-item"><a href="">Contact us </a></li>
       </menu>
