--- a/challenges.html
+++ b/challenges.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script type="module" src="src/js/filterByTypeOnLoad.js"></script>
     <script type="module" src="src/js/tag-filter.js"></script>
+    <script type="module" src="src/scriptChallenge.js"></script>
     <link rel="stylesheet" type="text/css" href="static/main.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
     <title>[ESC] Our challenges</title>
