Add class to challenge-list for styling

--- a/challenges.html
+++ b/challenges.html
@@ -89,8 +89,8 @@
       </div>
     </section>
 
-    <section class="challenge-cards">
-      <ul class="challenge-list"></ul>
+    <section class="challenges">
+      <ul class="challenge-list grid"></ul>
     </section>
 
     <footer>
