Close filter button

--- a/challenges.html
+++ b/challenges.html
@@ -7,6 +7,10 @@
     <script type="module" src="src/js/filterByTypeOnLoad.js"></script>
     <script type="module" src="src/js/tag-filter.js"></script>
     <link rel="stylesheet" type="text/css" href="static/main.css" />
+    <link rel="stylesheet" type="text/css" href="filter.css" />
+    <script  src="bundle.js"></script>
+
+
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
     <title>[ESC] Our challenges</title>
   </head>
@@ -27,11 +31,11 @@
     </nav>
 
     <h2>Our challenges</h2>
-    <section>
-      <button>Filter challenges</button>
+    <button class="button-close">Filter challenges</button>
+    <section class="filterSection">
+      <button>X</button>
       <div class="filter-container">
         <h3>Filter challenges</h3>
-        <button class="button-close">X</button>
 
         <div class="filter-by-type">
           <h4>By type</h4>
