--- a/challenges.html
+++ b/challenges.html
@@ -122,5 +122,6 @@
       </nav>
     </footer>
     <script src="bundle.js"></script>
+    <script type="module" src="src/script.js"></script>
   </body>
 </html>
