Combine with rating filter

--- a/challenges.html
+++ b/challenges.html
@@ -59,11 +59,11 @@
             arial-valuemin="0"
             aria-valuemax="5"
           >
-            <li class="rating-star inactive"></li>
-            <li class="rating-star inactive"></li>
-            <li class="rating-star inactive"></li>
-            <li class="rating-star inactive"></li>
-            <li class="rating-star inactive"></li>
+            <li class="rating-star starFrom  inactive"></li>
+            <li class="rating-star starFrom  inactive"></li>
+            <li class="rating-star starFrom  inactive"></li>
+            <li class="rating-star starFrom  inactive"></li>
+            <li class="rating-star starFrom  inactive"></li>
           </ul>
           <label for="rating-star">to</label>
           <ul
@@ -73,11 +73,11 @@
             arial-valuemin="0"
             aria-valuemax="5"
           >
-            <li class="rating-star active"></li>
-            <li class="rating-star active"></li>
-            <li class="rating-star active"></li>
-            <li class="rating-star active"></li>
-            <li class="rating-star active"></li>
+            <li class="rating-star starTo active"></li>
+            <li class="rating-star starTo active"></li>
+            <li class="rating-star starTo active"></li>
+            <li class="rating-star starTo active"></li>
+            <li class="rating-star starTo active"></li>
           </ul>
         </div>
         <div id="btn-container">
