Show text when no matching challenges

--- a/challenges.html
+++ b/challenges.html
@@ -92,6 +92,7 @@
 
     <section class="challenge-cards">
       <ul class="challenge-list"></ul>
+      <p class="no-matching-challenges hidden">No matching challenges</p>
     </section>
 
     <footer>
