Co-authored-by: Axel Asp <solidtop@users.noreply.github.com> Co-authored-by: JonathanHolmgren <JonathanHolmgren@users.noreply.github.com>

--- a/challenges.html
+++ b/challenges.html
@@ -80,11 +80,11 @@
               arial-valuemin="0"
               aria-valuemax="5"
             >
-              <li class="starDeactive"></li>
-              <li class="starDeactive"></li>
-              <li class="starDeactive"></li>
-              <li class="starDeactive"></li>
-              <li class="starDeactive"></li>
+              <li class="starDeactive active"></li>
+              <li class="starDeactive active"></li>
+              <li class="starDeactive active"></li>
+              <li class="starDeactive active"></li>
+              <li class="starDeactive active"></li>
             </ul>
           </div>
         </div>
@@ -133,7 +133,6 @@
         </menu>
       </nav>
     </footer>
-    <script src="bundle.js"></script>
-    <script type="module" src="src/script.js"></script>
+    <!-- <script src="bundle.js"></script> -->
   </body>
 </html>
