--- a/index.html
+++ b/index.html
@@ -1,13 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-<!--<testing...just testing>-->
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
     <link rel="stylesheet" type="text/css" href="static/main.css">
-    <script type="module" src="src/script.js"></script>
     <title>[ESC] Hacker Escape Rooms</title>
 </head>
 
@@ -57,71 +55,7 @@
     </section>
     <section class="challenges">
         <h2>Popular challenges right now</h2>
-        <ul class="challenge-list">
-            <!-- <li class="challenge-item">
-                <img class="challenge-image" alt="Hacker" src="static/hero.png">
-                <h3 class="challenge-title">Title of room (on-site)</h3>
-                <ul role="meter" class="rating" aria-label="rating"
-                    arial-valuemin="0" aria-valuemax="5" aria-valuenow="4"
-                    aria-valuetext="4 out of 5">
-
-                    <li class="rating-star active"></li>
-                    <li class="rating-star active"></li>
-                    <li class="rating-star active"></li>
-                    <li class="rating-star active"></li>
-                    <li class="rating-star"></li>
-                </ul>
-                <small class="challenge-meta">2-6 participants</small>
-                <p class="challenge-description">
-                    Praeterea, ex culpa non invenies unum aut non accusatis
-                    unum. Et nihil inuitam. Nemo nocere tibi
-                    erit, et non inimicos, et
-                </p>
-                <button class="button primary">Book this room</button>
-            </li>
-            <li class="challenge-item">
-                <img class="challenge-image" alt="Hacker" src="static/hero.png">
-                <h3 class="challenge-title">Title of room (on-site)</h3>
-                <ul role="meter" class="rating" aria-label="rating"
-                    arial-valuemin="0" aria-valuemax="5" aria-valuenow="4"
-                    aria-valuetext="4 out of 5">
-
-                    <li class="rating-star active"></li>
-                    <li class="rating-star active"></li>
-                    <li class="rating-star active"></li>
-                    <li class="rating-star active"></li>
-                    <li class="rating-star"></li>
-                </ul>
-                <small class="challenge-meta">2-6 participants</small>
-                <p class="challenge-description">
-                    Praeterea, ex culpa non invenies unum aut non accusatis
-                    unum. Et nihil inuitam. Nemo nocere tibi
-                    erit, et non inimicos, et
-                </p>
-                <button class="button primary">Book this room</button>
-            </li>
-            <li class="challenge-item">
-                <img class="challenge-image" alt="Hacker" src="static/hero.png">
-                <h3 class="challenge-title">Title of room (on-site)</h3>
-                <ul role="meter" class="rating" aria-label="rating"
-                    arial-valuemin="0" aria-valuemax="5" aria-valuenow="4"
-                    aria-valuetext="4 out of 5">
-
-                    <li class="rating-star active"></li>
-                    <li class="rating-star active"></li>
-                    <li class="rating-star active"></li>
-                    <li class="rating-star active"></li>
-                    <li class="rating-star"></li>
-                </ul>
-                <small class="challenge-meta">2-6 participants</small>
-                <p class="challenge-description">
-                    Praeterea, ex culpa non invenies unum aut non accusatis
-                    unum. Et nihil inuitam. Nemo nocere tibi
-                    erit, et non inimicos, et
-                </p>
-                <button class="button primary">Book this room</button>
-            </li> -->
-        </ul>
+        <ul class="challenge-list"></ul>
 
         <div class="challenges-cta">
             <a class="button primary" href="challenges.html?type=online">Online challenges</a>
@@ -197,11 +131,7 @@
             </menu>
         </nav>
     </footer>
-    <script>
-        document.querySelector('.main-nav-toggle').addEventListener('click', () => {
-            document.querySelector('.main-nav').classList.toggle('open');
-        })
-    </script>
+    <script type="module" src="src/script.js"></script>
 </body>
 
 </html>
