Fix broken type, tag and text filter

--- a/challenges.html
+++ b/challenges.html
@@ -65,11 +65,11 @@
               arial-valuemin="0"
               aria-valuemax="5"
             >
-              <li class="starDeactive"></li>
-              <li class="starDeactive"></li>
-              <li class="starDeactive"></li>
-              <li class="starDeactive"></li>
-              <li class="starDeactive"></li>
+              <li class="starDeactive starsFrom"></li>
+              <li class="starDeactive starsFrom"></li>
+              <li class="starDeactive starsFrom"></li>
+              <li class="starDeactive starsFrom"></li>
+              <li class="starDeactive starsFrom"></li>
             </ul>
             <span>to</span>
             <ul
@@ -80,11 +80,11 @@
               arial-valuemin="0"
               aria-valuemax="5"
             >
-              <li class="starDeactive active"></li>
-              <li class="starDeactive active"></li>
-              <li class="starDeactive active"></li>
-              <li class="starDeactive active"></li>
-              <li class="starDeactive active"></li>
+              <li class="starDeactive starsTo active"></li>
+              <li class="starDeactive starsTo active"></li>
+              <li class="starDeactive starsTo active"></li>
+              <li class="starDeactive starsTo active"></li>
+              <li class="starDeactive starsTo active"></li>
             </ul>
           </div>
         </div>
