Co-authored-by: Axel Asp <solidtop@users.noreply.github.com> Co-authored-by: JonathanHolmgren <JonathanHolmgren@users.noreply.github.com> Co-authored-by: davidlidebrandt <davidlidebrandt@users.noreply.github.com>

--- a/challenges.html
+++ b/challenges.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script type="module" src="src/scriptChallenge.js"></script>
     <link rel="stylesheet" type="text/css" href="static/main.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
     <title>[ESC] Our challenges</title>
@@ -12,7 +11,7 @@
 
   <body>
     <header>
-      <h1>Hacker Escape Rooms</h1>
+      <a href="index.html"><h1>Hacker Escape Rooms</h1></a>
     </header>
 
     <nav class="main-nav">
@@ -133,6 +132,6 @@
         </menu>
       </nav>
     </footer>
-    <!-- <script src="bundle.js"></script> -->
+    <script src="challenge.js"></script>
   </body>
 </html>
