--- a/index.html
+++ b/index.html
@@ -131,7 +131,6 @@
             </menu>
         </nav>
     </footer>
-    <script type="module" src="src/script.js"></script>
+    <script src="index.js"></script>
 </body>
-
 </html>
