Add radio buttons

--- a/challenges.html
+++ b/challenges.html
@@ -96,6 +96,13 @@
           <h4>Or type to search for keyword</h4>
           <input type="text" id="text-filter" placeholder="Start typing to filter" />
         </div>
+        <div class="sort-by">
+          <h4>Sort by</h4>
+          <label for="sort-by-rating">Rating</label>
+          <input type="radio" name="sort-by" id="sort-by-rating" value="rating">
+          <label for="sort-by-name">Name</label>
+          <input type="radio" name="sort-by" id="sort-by-name" value="name">
+        </div>
       </menu>
     </section>
 
