Changed OG links from live server links to Github Pages links

--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
     <meta name="title" content="[ESC] Hacker Escape Rooms">
     <meta name="description" content="Do u like hacking? So this is something for you! Enter the world of Hacker Escape Rooms. Challenge yourself!">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="http://127.0.0.1:5501/index.html">
+    <meta property="og:url" content="https://solidtop.github.io/esc-hacker-escape-rooms/index.html">
     <meta property="og:title" content="[ESC] Hacker Escape Rooms">
     <meta property="og:description" content="Do u like hacking? So this is something for you! Enter the world of Hacker Escape Rooms. Challenge yourself!">
     <meta property="og:image" content="https://github.com/solidtop/esc-hacker-escape-rooms/blob/main/static/hero.png?raw=true">
     <meta property="twitter:card" content="summary_large_image">
-    <meta property="twitter:url" content="http://127.0.0.1:5501/index.html">
+    <meta property="twitter:url" content="https://solidtop.github.io/esc-hacker-escape-rooms/index.html">
     <meta property="twitter:title" content="[ESC] Hacker Escape Rooms">
     <meta property="twitter:description" content="Do u like hacking? So this is something for you! Enter the world of Hacker Escape Rooms. Challenge yourself!">
     <meta property="twitter:image" content="https://github.com/solidtop/esc-hacker-escape-rooms/blob/main/static/hero.png?raw=true">
