--- a/challenges.html
+++ b/challenges.html
@@ -10,12 +10,12 @@
     <meta name="title" content="[ESC] Our challenges">
     <meta name="description" content="Challenge yourself! Book one of the challenges on Hacker Escape Room site. On-line or on-site - it is up to you!">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="http://127.0.0.1:5501/challenge.html">
+    <meta property="og:url" content="https://solidtop.github.io/esc-hacker-escape-rooms/challenges.html">
     <meta property="og:title" content="[ESC] Our challenges">
     <meta property="og:description" content="Challenge yourself! Book one of the challenges on Hacker Escape Room site. On-line or on-site - it is up to you!">
     <meta property="og:image" content="https://github.com/solidtop/esc-hacker-escape-rooms/blob/main/static/usp1.png?raw=true">
     <meta property="twitter:card" content="summary_large_image">
-    <meta property="twitter:url" content="http://127.0.0.1:5501/challenge.html">
+    <meta property="twitter:url" content="https://solidtop.github.io/esc-hacker-escape-rooms/challenges.html">
     <meta property="twitter:title" content="[ESC] Our challenges">
     <meta property="twitter:description" content="Challenge yourself! Book one of the challenges on Hacker Escape Room site. On-line or on-site - it is up to you!">
     <meta property="twitter:image" content="https://github.com/solidtop/esc-hacker-escape-rooms/blob/main/static/usp1.png?raw=true">
