Fix sorting bug in firefox

--- a/challenges.html
+++ b/challenges.html
@@ -99,9 +99,9 @@
         <div class="sort-by">
           <h4>Sort by</h4>
           <label for="sort-by-rating">Rating</label>
-          <input type="radio" name="sort-by" id="sort-by-rating" value="rating">
+          <input autocomplete="off" type="radio" name="sort-by" id="sort-by-rating" value="rating">
           <label for="sort-by-name">Name</label>
-          <input type="radio" name="sort-by" id="sort-by-name" value="name">
+          <input autocomplete="off" type="radio" name="sort-by" id="sort-by-name" value="name">
         </div>
       </menu>
     </section>
