--- a/challenges.html
+++ b/challenges.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" type="text/css" href="static/main.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
     <title>[ESC] Our challenges</title>
+    <link rel="shortcut icon" href="/static/icon_title.png">
   </head>
 
   <body>
