--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
     <link rel="stylesheet" type="text/css" href="static/main.css">
     <title>[ESC] Hacker Escape Rooms</title>
+    <link rel="shortcut icon" href="/static/icon_title.png">
 </head>
 
 <body>
