--- a/index.html
+++ b/index.html
@@ -7,6 +7,18 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
     <link rel="stylesheet" type="text/css" href="static/main.css">
     <title>[ESC] Hacker Escape Rooms</title>
+    <meta name="title" content="[ESC] Hacker Escape Rooms">
+    <meta name="description" content="Do u like hacking? So this is something for you! Enter the world of Hacker Escape Rooms. Challenge yourself!">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://solidtop.github.io/esc-hacker-escape-rooms/index.html">
+    <meta property="og:title" content="[ESC] Hacker Escape Rooms">
+    <meta property="og:description" content="Do u like hacking? So this is something for you! Enter the world of Hacker Escape Rooms. Challenge yourself!">
+    <meta property="og:image" content="https://github.com/solidtop/esc-hacker-escape-rooms/blob/main/static/hero.png?raw=true">
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://solidtop.github.io/esc-hacker-escape-rooms/index.html">
+    <meta property="twitter:title" content="[ESC] Hacker Escape Rooms">
+    <meta property="twitter:description" content="Do u like hacking? So this is something for you! Enter the world of Hacker Escape Rooms. Challenge yourself!">
+    <meta property="twitter:image" content="https://github.com/solidtop/esc-hacker-escape-rooms/blob/main/static/hero.png?raw=true">
 </head>
 
 <body>
