about us +contact us

--- a/challenges.html
+++ b/challenges.html
@@ -31,8 +31,8 @@
       <menu class="main-menu">
         <li class="main-menu-item"><a href="challenges.html?type=online">Play online</a></li>
         <li class="main-menu-item"><a href="challenges.html?type=onsite">Play on-site</a></li>
-        <li class="main-menu-item"><a href="">The story</a></li>
-        <li class="main-menu-item"><a href="">Contact us </a></li>
+        <li class="main-menu-item"><a href="about.html">The story</a></li>
+        <li class="main-menu-item"><a href="contact.html">Contact us </a></li>
       </menu>
     </nav>
 
@@ -135,8 +135,8 @@
       <nav class="footer-sitemap">
         <h2>Site map</h2>
         <menu>
-          <li class="misc-link"><a href="">The Story</a></li>
-          <li class="misc-link"><a href="">Contact Us</a></li>
+          <li class="misc-link"><a href="about.html">The Story</a></li>
+          <li class="misc-link"><a href="contact.html">Contact Us</a></li>
           <li class="misc-link"><a href="">Legal</a></li>
           <li class="play-link"><a href="">Play online</a></li>
           <li class="play-link"><a href="">Play on-site</a></li>
