Added class to about and contact us
Now challenge page and main page are unaffected.

--- a/contact.html
+++ b/contact.html
@@ -21,7 +21,7 @@
     <meta property="twitter:image" content="https://github.com/solidtop/esc-hacker-escape-rooms/blob/main/static/hero.png?raw=true">
 </head>
 
-<body>
+<body class ="body-contact">
     <header>
         <h1>Hacker Escape Rooms</h1>
     </header>
