--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
     <link rel="stylesheet" type="text/css" href="static/main.css">
     <title>[ESC] Hacker Escape Rooms</title>
+    <link rel="shortcut icon" href="/static/icon_title.png">
     <meta name="title" content="[ESC] Hacker Escape Rooms">
     <meta name="description" content="Do u like hacking? So this is something for you! Enter the world of Hacker Escape Rooms. Challenge yourself!">
     <meta property="og:type" content="website">
