Add create filter url link function

--- a/challenges.html
+++ b/challenges.html
@@ -11,6 +11,7 @@
     />
     <title>[ESC] Our challenges</title>
     <link rel="shortcut icon" href="static/icon_title.png" />
+    <script  defer src="src/js/queryLink.js"></script>
     <meta name="title" content="[ESC] Our challenges" />
     <meta
       name="description"
