--- a/about.html
+++ b/about.html
@@ -139,7 +139,7 @@
 
 
 
-        <a class="button primary" href="index.html">Back to main page</a>
+        <a class="button primary" id= button-up href="index.html">Back to main page</a>
     </section>
 <!--  -->
     <footer>
