--- a/contact.html
+++ b/contact.html
@@ -63,10 +63,10 @@
     </div>
 
         
-        <a class="button primary" href="index.html">Back to main page</a>
+        <a class="button primary" id="button-up" href="index.html">Back to main page</a>
     </section>
 
-     <a class="button primary" href="challenges.html?type=online">Back to challenges</a>
+     <a class="button primary" id="button-up" href="challenges.html?type=online">Back to challenges</a>
         </div>
         </div>
     </section>
